// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with both arrows 1`] = `
<div
  className="followup-timeline-box"
>
  <ArrowButton
    direction="left"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
  <ArrowButton
    direction="right"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly with left arrow 1`] = `
<div
  className="followup-timeline-box"
>
  <ArrowButton
    direction="left"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
  <div>
    Element
  </div>
</div>
`;

exports[`rendering renders correctly with right arrow 1`] = `
<div
  className="followup-timeline-box"
>
  <div>
    Element
  </div>
  <ArrowButton
    direction="right"
    disabled={false}
    label="1"
    onTouchTap={[Function]}
  />
</div>
`;

exports[`rendering renders correctly without arrows 1`] = `
<div
  className="followup-timeline-box"
>
  <div>
    Element
  </div>
</div>
`;
